# NGM

test/: .autotools  .cproject  .project
test/Cloud/frontend/: .gitignore  bower.json  index.html
test/Cloud/frontend/scripts/: angular-material-sidenav.js  app.js  config.js
test/Cloud/frontend/styles/: angular-material-sidenav.css  main.css
test/Cloud/frontend/views/: main.html  signin.html
test/Cloud/server/: app-run-prd-01.json  app-run.json  package.json  server.js
test/Cloud/server/config/: default.json  development.json  production.json
test/Cloud/server/controllers/: batchController.js  commandController.js  deviceController.js  fileManagerController.js  historyController.js  loginController.js
test/Cloud/server/routes/: ApiRouter.js  BatchRouter.js  DevicesRouter.js  FileManagerRouter.js  HistoryRouter.js  LoginRouter.js
test/Cloud/server/util/: logger.js  promiseLoop.js
test/WebUI/frontend/: bower.json  index.html
test/WebUI/frontend/scripts/: angular-material-sidenav.js  app.js
test/WebUI/frontend/styles/: angular-material-sidenav.css  main.css  material-icons-font.css  roboto-font.css
test/WebUI/server/: app.js  package.json
test/ngm/: .cproject  .project  CMakeLists.txt  CMakeToolchain.txt  CMakeToolchainPc.txt  Configuration.xml  ConfigurationUzi.xml  ConfigureDevice.xml  Log.h  Version.h  c12ngm-data-state-common-create.sql  c12ngm-data-state-common.sqlite3.empty  ngm.cpp  ngm.sln
test/ngm/Accelerometer/: Accelerometer.cpp  Accelerometer.h  Algorithm.cpp  Algorithm.h  Filter.cpp  Filter.h  lsm6ds3.h
test/ngm/Aws/: AwsClient.cpp  AwsClient.h  AwsDeltaData.h  AwsHandler.h  AwsS3.cpp  AwsS3.h  AwsShadow.cpp  AwsShadow.h
test/ngm/CLI/: CLI.vcxproj  CLI.vcxproj.filters  CLICommand.cpp  CLICommand.h  CLIManager.cpp  CLIManager.h
test/ngm/CLIDbg/: CLIDbg.vcxproj  SampleDevice.cpp  SampleDevice.h  main.cpp  msp430Config.ini  msp430Params.xml
test/ngm/CloudManager/: CloudCommands.h  CloudManager.cpp  CloudManager.h  Event.cpp  Event.h  GeneralDevice.cpp  GeneralDevice.h  MosquittoClient.cpp  MosquittoClient.h  SqlDeviceMap.cpp  SqlDeviceMap.h
test/ngm/Configuration/: download.sh
test/ngm/DeviceMgr/: AnyValue.cpp  AnyValue.h  Device.cpp  Device.h  DeviceMgr.vcxproj  Exceptions.h  HRData.cpp  HRData.h  HRParameter.cpp  HRParameter.h  HRStatistics.cpp  HRStatistics.h  HardwareManager.cpp  HardwareManager.h  ISupportConfiguration.h  Parameter.cpp  Parameter.h  ParameterBase.cpp  ParameterBase.h  Register.cpp  Register.h  SensorState.h  SimpleIni.h
test/ngm/DeviceMgrDbg/: DeviceMgrDbg.vcxproj  SampleDevice.cpp  SampleDevice.h  main.cpp  msp430Config.ini  msp430Params.xml
test/ngm/DisclosingSensor/: DisclosingSensor.cpp  DisclosingSensor.h
test/ngm/Gps/: gps.cpp  gps.h
test/ngm/Leds/: Leds.cpp  Leds.h  lp55231.h
test/ngm/Logger/: LogInterface.cpp  LogInterface.h  LogStream.cpp  LogStream.h  LogWriter.cpp  LogWriter.h  Logger.cpp  Logger.h
test/ngm/LteModem/: LteModem.cpp  LteModem.h
test/ngm/Msp430/: buffer.cpp  buffer.h  dlt645msg.cpp  dlt645msg.h  msp430.cpp  msp430.h
test/ngm/Rtl8363/: rtl8363.cpp  rtl8363.h
test/ngm/SerialComm/: SerialComm.cpp  SerialComm.h
test/ngm/TempSensor/: CpuTemperature.cpp  CpuTemperature.h  TempHRParameters.h  TempSensor.cpp  TempSensor.h
test/ngm/Upgrade/: bashrc  make_version.sh  nodejs-ui.sh  profile  rc.local
test/ngm/Upgrade/generator/: download.sh  get_files.sh  make_upgrade.sh  unpack_upgrade.sh  version.sh
test/ngm/Upgrade/generator/files/: Configuration.xml  Configuration.xml.cksum  WebUI.tar.gz.cksum  download.sh  download.sh.cksum  ifmetric  ifmetric.cksum  imx6q-var-dart.dtb  imx6q-var-dart.dtb.cksum  logrotate.cksum  logrotate.conf.cksum  ngm.cksum  rsyslog  rsyslog.cksum  upgrade.sh  upgrade.sh.cksum
test/ngm/Upgrade/generator/unpacked/: Configuration.xml  Configuration.xml.cksum  ngm.cksum  upgrade.sh.cksum
test/ngm/Utils/: CrashHandler.cpp  CrashHandler.h  I2c.cpp  I2c.h  NetUtils.cpp  NetUtils.h  ObjectCounter.cpp  ObjectCounter.h  PeriodicalAction.cpp  PeriodicalAction.h  SQLite3DB.cpp  SQLite3DB.h  Spi.cpp  Spi.h  SysSensor.cpp  SysSensor.h  ThreadWatchdog.cpp  ThreadWatchdog.h  Uio.cpp  Uio.h  Vector.h  json.h  json.hpp_bak  json_fixed.hpp  serialport.cpp  serialport.h
test/ngm/aws-iot-device-sdk/: aws_iot_mqtt_client.c  aws_iot_mqtt_client_common_internal.c  aws_iot_mqtt_client_publish.c  aws_iot_mqtt_client_subscribe.c  aws_iot_mqtt_client_unsubscribe.c  aws_iot_shadow.c  aws_iot_shadow_json.c  aws_iot_shadow_records.c  network_mbedtls_wrapper.c
test/ngm/aws-iot-device-sdk/include/: aws_iot_config.h  aws_iot_log.h  aws_iot_mqtt_client.h
test/ngm/certs/: certificate.pem.crt  private.pem.key  public.pem.key
test/ngm/libnmea/: gpgga.c  gpgll.c  gprmc.c  parse.c_not_use  parse.h  parser_static.c
test/ngm/logs/: gps.log.0  gps.log.1  system.log.0  system.log.1  system.log.2
test/ngm/mbedTLS/: CMakeLists.txt  Makefile
test/ngm/tinyxml/: tinyxml.h  tinyxml.vcxproj
(+139 files in other folders)
